@@ -1,4 +1,4 @@
-/* Copyright (C) 1995, 96, 97, 98, 99, 2000 Free Software Foundation, Inc.
+/* Copyright (C) 1995,96,97,98,99,2000,2002 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -65,7 +65,7 @@ ENTRY (BP_SYM (__mmap64))
 
 	/* Do the system call trap.  */
 L(do_syscall):
-	int $0x80
+	ENTER_KERNEL
 
 	/* Restore registers.  */
 	popl %edi
@@ -110,7 +110,7 @@ L(einval):
 	lea ADDR-SVRSP(%esp), %ebx	/* Address of args is 1st arg.  */
 
 	/* Do the system call trap.  */
-	int $0x80
+	ENTER_KERNEL
 
 	/* Restore registers.  */
 	movl %edx, %ebx
