@@ -131,9 +131,9 @@ __libc_sigaction (int sig, const struct sigaction *act, struct sigaction *oact)
       k_newact.sa_restorer = &restore;
     }
 
-  asm volatile ("pushl %%ebx\n"
-		"movl %2, %%ebx\n"
-		"int $0x80\n"
+  asm volatile ("pushl %%ebx\n\t"
+		"movl %2, %%ebx\n\t"
+		ENTER_KERNEL_STR "\n\t"
 		"popl %%ebx"
 		: "=a" (result)
 		: "0" (SYS_ify (sigaction)), "mr" (sig),
